--- a/webapp/app/src/Content.css
+++ b/webapp/app/src/Content.css
@@ -12,30 +12,34 @@ main {
     width: fit-content;
 }
 
-.row-1 {
-    display: flex;
-    justify-content: left;
-    gap: 0 20px;
-}
-
-.row-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 0 20px;
-}
-
-.row-3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    gap: 20px 20px;
-}
-
 .translate-btn {
-    width: fit-content;
-    block-size: fit-content;
-    font-size: calc(10px + 1vmin);
-    color: #000;
-    margin: 10px;
+  width: 90%;
+  height: auto;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 3px 10px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-size: calc(10px + 1vmin);
+  justify-content: center;
+  line-height: 1;
+  margin: 10px;
+  outline: none;
+  padding: 1rem 1.2rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.translate-btn:hover {
+  box-shadow: #121212 0 0 0 1px, transparent 0 0 0 0;
 }
