--- a/webapp/app/src/Header.css
+++ b/webapp/app/src/Header.css
@@ -1,6 +1,6 @@
 
 .header {
-    background-color: #598e66;
+    background-color: #177d4f;
     min-height: 100px;
     max-height: 200px;
     display: flex;
