--- a/webapp/app/src/Box.css
+++ b/webapp/app/src/Box.css
@@ -1,5 +1,14 @@
 .box {
-  height: auto;
-  width: auto;
-  border: 1px solid #c2c2c2;
+  height: 100%;
+  width: 100%;
+  border: 2px solid rgba(18, 18, 18, .1);
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 3px 10px;
+  box-sizing: border-box;
+  padding: 1%;
+}
+
+.box:hover {
+  box-shadow: #121212 0 0 0 1px, transparent 0 0 0 0;
 }
